force-app/main/default/objects/Activity/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer Acquisition / First Visit</fullName>
            </value>
            <value>
                <fullName>Existing Customer Relationship Management</fullName>
            </value>
            <value>
                <fullName>Contract or Commercial Terms Negotiation</fullName>
            </value>
            <value>
                <fullName>Complaint Handling / Foreign Object Issue</fullName>
            </value>
            <value>
                <fullName>Product Introduction / Assortment Expansion</fullName>
            </value>
            <value>
                <fullName>POS Visibility / Brand Presentation</fullName>
            </value>
            <value>
                <fullName>On-Site Competitor Observation</fullName>
            </value>
            <value>
                <fullName>Sales Decline / Variance Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>