force-app/main/default/objects/Activity/fields/IsVisit__c.field-meta.xml
<CustomField>
    <fullName>IsVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVisit</label>
    <type>Checkbox</type>
</CustomField>