force-app/main/default/objects/Activity/fields/QualityCheck__c.field-meta.xml
<CustomField>
    <fullName>QualityCheck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Check</label>
    <referenceTo>Quality_Check__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>