force-app/main/default/objects/Activity/fields/Type_custom__c.field-meta.xml
<CustomField>
    <fullName>Type_custom__c</fullName>
    <label>Type (custom)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Quality-Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>