force-app/main/default/objects/Activity/fields/Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Report</label>
    <referenceTo>VisitReport__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>